--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
   display: flex;
   flex-direction: column;
   max-height: 100vh;
+  margin-top: 30px;
 }
 
 /* ----------------- Typography ----------------- */
