Atualização no app.js e no arquivo de estilos

--- a/style.css
+++ b/style.css
@@ -260,6 +260,10 @@ button {
   margin-top: var(--base-padding);
 }
 
+.cart-footer__total {
+  font-weight: bold;
+}
+
 .overlay {
   position: fixed;
   top: 0;
